fixed scroll issue on mobile

--- a/style.scss
+++ b/style.scss
@@ -14,6 +14,19 @@ body {
 	}
 }
 
+h1 {
+	font-size: 3em;
+}
+h2 {
+	font-size: 2.5em;
+}
+h3 {
+	font-size: 2em;
+}
+h4 {
+	font-size: 1.65em;
+}
+
 .sticky {
 	position: fixed;
 	top: 0;
@@ -85,6 +98,7 @@ header {
 .jumbo-cover {
 	padding: 48px 16px;
 	h3,
+	h2,
 	.strong {
 		color: $secondaryColor;
 	}
